# pamabot

./: CMakeLists.txt  README.md  mapa.pgm  mapa.yaml  package.xml
my_nav2_system/: package.xml  setup.py
my_nav2_system/config/: farmaciaMapa.yaml  my_nav2_params.yaml  pamabot_world.rviz  pamabot_world_fixed_final.rviz
my_nav2_system/launch/: my_nav2_system.launch.py  my_nav2_waypoints_follower.launch.py  my_tb3_sim_nav2.launch.py
my_nav2_system/my_nav2_system/: initial_pose_pub.py  my_waypoint_follower.py
pamabot/: CMakeLists.txt  package.xml
pamabot_capture_image/: package.xml  setup.cfg  setup.py
pamabot_capture_image/pamabot_capture_image/: capture_image
pamabot_capture_image/test/: test_image_saver.py
pamabot_interface/: CMakeLists.txt  package.xml
pamabot_labels/: aguaoxigenada1.txt  aguaoxigenada2.txt  aguaoxigenada4.txt  aguaoxigenada5.txt  aguaoxigenada8.txt  aguaoxigenada9.txt  alcohol1.txt  alcohol3.txt  alcohol4.txt  alcohol5.txt  classes.txt
pamabot_my_first_action/: package.xml  setup.cfg  setup.py
pamabot_my_first_action/launch/: action_client.launch.py  action_server.launch.py
pamabot_my_first_action/pamabot_my_first_action/: action_client.py  action_server.py
pamabot_my_first_action/test/: test_feedback_callback.py
pamabot_my_nav2_system/: package.xml  setup.cfg  setup.py
pamabot_my_nav2_system/behavior_trees/: simple_nav.xml
pamabot_my_nav2_system/config/: my_nav2_params.yaml  pamabot_world.rviz  pamabot_world_fixed.rviz
pamabot_my_nav2_system/launch/: my_nav2_system.launch.py  my_nav2_waypoints_follower.launch.py  my_tb3_sim_nav2.launch.py
pamabot_my_nav2_system/pamabot_my_nav2_system/: initial_pose_pub.py  my_waypoint_follower.py
pamabot_my_nav2_system/test/: test_copyright.py  test_flake8.py  test_launch_basic.py  test_pep257.py
pamabot_my_nav2_system/urdf/: turtlebot3_burger.urdf
pamabot_my_slam/: package.xml  setup.cfg  setup.py
pamabot_my_slam/config/: my_slam.lua
pamabot_my_slam/launch/: my_slam.launch.py
pamabot_my_world/: CMakeLists.txt  package.xml
pamabot_my_world/launch/: turtlebot3_my_world.launch.py
pamabot_my_world/test/: test_turtlebot3_drive.cpp
pamabot_my_world_2/: CMakeLists.txt  package.xml
pamabot_my_world_2/launch/: turtlebot3_my_world.launch.py
pamabot_my_world_2/world/: planta_farmacia.model
pamabot_provide_map/: package.xml  setup.cfg  setup.py
pamabot_queue_detector/: package.xml  setup.cfg  setup.py
pamabot_vision/: package.xml  setup.cfg  setup.py
pamabot_web/: admin.html  base_header_footer.html  contacto.html  empleado.html  index.html  package-lock.json  package.json  politica_privacidad.html  usuario.html
pamabot_wep/: main.html  main.js
pamabot_yolo_dataset/: dataset.yaml  test_yolo_batch_all.py  test_yolo_dataset_batch.py  test_yolo_local.py
queue_detector/: package.xml  setup.cfg  setup.py
(+436 files in other folders)
