<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pamabot</name>
  <version>0.0.0</version>
  <description>
    PAMABOT - Robot de Farmacia
  </description>
  <maintainer email="asperez@upv.es">Asun Perez</maintainer>
  <license>Apache 2.0</license>

  <url type="repository">https://github.com/mmanueeela/pamabot</url>

  <author email="mzazzar@epsg.upv.es">Manuela Zazzaro</author>
  <author email="mrosdap@epsg.upv.es">Mari Rosenova Dapcheva</author>
  <author email="pmeagon@epsg.upv.es">Pablo Meana Gonzalez</author>
  <author email="qtan@epsg.upv.es">Tan Qianzi</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>gazebo_ros_pkgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>turtlebot3_gazebo</exec_depend>
  <exec_depend>turtlebot3_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

